--- a/agribot_tasks/ur5_moveit/config/sensors_3d.yaml
+++ b/agribot_tasks/ur5_moveit/config/sensors_3d.yaml
@@ -4,7 +4,7 @@ sensors:
     max_range: 5.0
     max_update_rate: 1.0
     padding_offset: 0.1
-    padding_scale: 1.0
-    point_cloud_topic: /head_mount_kinect/depth_registered/points
+    padding_scale: 0.5
+    point_cloud_topic: /camera2/depth/points2
     point_subsample: 1
     sensor_plugin: occupancy_map_monitor/PointCloudOctomapUpdater
